gcc/testsuite/g++.dg/init/struct1.C
@@ -1,0 +1,6 @@
+struct bug {
+  const char *name;
+  unsigned long type;
+};
+
+struct bug s = { 0, (unsigned long) &s | 1 };
